# dr

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: test.yml
bench/: CMakeLists.txt  bench.hpp  main.cpp  mat3_multiply.cpp  mat4_solve.cpp  math_bench.cpp  mod.cpp  parallel_bench.cpp  parallel_for.cpp
include/dr/: allocator.hpp  basic_traits.hpp  basic_types.hpp  bitwise.hpp  constants.hpp  container_traits.hpp  container_utils.hpp  defer.hpp  deque.hpp  diagnostics.hpp  dynamic_array.hpp  function.hpp  function_ref.hpp  geometry.hpp  geometry_types.hpp  grid.hpp  halfedge.hpp  hash.hpp  hash_grid.hpp  hash_map.hpp  hash_set.hpp  interpolate.hpp  jagged_array.hpp  linalg_reshape.hpp  linalg_traits.hpp  linalg_types.hpp  math.hpp  math_constants.hpp  math_ctors.hpp  math_traits.hpp  math_types.hpp  memory.hpp  mesh_attributes.hpp  mesh_elements.hpp  mesh_incidence.hpp  mesh_operators.hpp  mesh_primitives.hpp  mesh_repair.hpp  mesh_utils.hpp  meta.hpp  (+13 more)
include/dr/shim/: omp.hpp
include/dr/shim/pmr/: deque.hpp  memory_resource.hpp  string.hpp  unordered_map.hpp  vector.hpp
src/: allocator.cpp  halfedge.cpp  memory.cpp  mesh_primitives.cpp  mesh_repair.cpp  parallel.cpp
test/: CMakeLists.txt  allocator_tests.cpp  bitwise_tests.cpp  container_tests.cpp  defer_tests.cpp  diagnostics_tests.cpp  function_ref_tests.cpp  function_tests.cpp  geometry_tests.cpp  grid_tests.cpp  halfedge_tests.cpp  hash_grid_tests.cpp  interpolate_tests.cpp  jagged_array_tests.cpp  linalg_tests.cpp  main.cpp  math_tests.cpp  memory_tests.cpp  mesh_attributes_tests.cpp  mesh_elements_tests.cpp  mesh_incidence_tests.cpp  mesh_operators_tests.cpp  mesh_repair_tests.cpp  mesh_tests.cpp  mesh_utils_tests.cpp  meta_tests.cpp  random_tests.cpp  result_tests.cpp  sliced_array_tests.cpp  slot_map_tests.cpp  span_tests.cpp  sparse_min_quad_tests.cpp  spline_tests.cpp  template_checks.cpp  test_utils.hpp  transform_tests.cpp  triangulate_tests.cpp
